--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,5 +49,6 @@ subjects:
 - !lcsh 'Brothers -- Juvenile fiction'
 - !lcsh 'Fathers and sons -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Les enfants des bois
 url: http://www.gutenberg.org/ebooks/33339
